Updates test file and readme

--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script>
 	$.ajax({
-		url: 'http://localhost:4500',
+		url: 'http://proxy.hackeryou.com',
 		type: 'GET',
 		data: {
 			reqUrl: 'http://api.brewerydb.com/v2/beers',
