--- a/test.html
+++ b/test.html
@@ -7,18 +7,55 @@
 <body>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script>
-	$.ajax({
-		url: 'http://proxy.hackeryou.com',
-		type: 'GET',
-		data: {
-			reqUrl: 'http://api.brewerydb.com/v2/beers',
-			params: {
-				"key" :"217d6bd3a9e78edebe4af03ca28fa01b",
-				"styleId" :1 
+	// $.ajax({
+	// 	url: 'http://proxy.hackeryou.com',
+	// 	type: 'GET',
+	// 	data: {
+	// 		reqUrl: 'http://api.brewerydb.com/v2/beers',
+	// 		params: {
+	// 			"key" :"217d6bd3a9e78edebe4af03ca28fa01b",
+	// 			"styleId" :1 
+	// 		}
+	// 	}
+	// }).then(function(res) {
+	// 	console.log(res);
+	// });
+	//https://sheetsu.com/apis/14561de4
+	var books = $.ajax({
+		url: 'https://sheetsu.com/apis/14561de4',
+		dataType: 'json',
+		method: 'GET'
+	});
+
+
+	myAPIProject = {};
+	myAPIProject.goodreadsAPI = {}; // empty object to store all the goodreads API info
+	myAPIProject.goodreadsAPI.endpoint = 'https://www.goodreads.com/book/title.xml';
+	myAPIProject.goodreadsAPI.key = 'AYoaCzPGXisCTWsP6Ainw'
+
+	myAPIProject.goodreadsAPI.getBooks = function(selectedBook) {
+		return $.ajax({
+			url: 'http://localhost:4500', // send the initial request through the HY proxy app because the endpoint returns XML. We need to mask the URL through another.
+			dataType: 'json',
+			method: 'GET',
+			data: { // This is where we pass in info regarding the endpoint we want to use. 
+				reqUrl: myAPIProject.goodreadsAPI.endpoint, // Put API endpoint here
+				params: { // act as a query string ie. data property in jquery
+					key: myAPIProject.goodreadsAPI.key,
+					title: selectedBook.bookTitle
+				},
+				xmlToJSON: true
 			}
-		}
-	}).then(function(res) {
-		console.log(res);
+		})
+	};
+	books.then(function(bookData) {
+		console.log(bookData);
+		var myBooks = bookData.result.map((book) => {
+			return myAPIProject.goodreadsAPI.getBooks(book);
+		});
+		$.when.apply(null,myBooks).done(() => {
+			console.log(arguments);
+		})
 	});
 	</script>
 </body>
