--- a/test.html
+++ b/test.html
@@ -18,7 +18,7 @@
 				"key" :"217d6bd3a9e78edebe4af03ca28fa01b",
 				"styleId" :1 
 			},
-			useCache: true,
+			useCache: false,
 			proxyHeaders: {
 				'X-Something-Cool':'whoooooa'
 			}
